# sigma-operator

./: .gitignore  COMMAND_MATURITY.md  CONTRIBUTING.md  MILESTONE_NEXT.md  MINT_CLOSE_CONTRACT_MAP_2026-03-16.md  PART2_CLI_TESTING_GATE.md  PART2_MILESTONES_CHECKLIST.md  PART2_OPERATOR_RUN_SEQUENCE.md  PART2_PLAN.md  PART2_TASKS.md  README.md  SIGMA_CLI_COMMAND_SPEC_NEXT.md  SIGMA_RUN_LEDGER.md  SIGMA_STATUS_AND_PUBLIC_REPO_PATH.md  SIGMA_VERIFICATION_CHECKLIST.md  SPEC.md  STATUS.md  WALLET_ARCHITECTURE.md  pyproject.toml  sigma
sigma_operator/: abi.py  account.py  capture.py  cli.py  config.py  decode.py  fetch.py  governance.py  operations.py  plan.py  skill_bridge.py  surface_truth.py
