[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sigma-operator"
version = "0.1.0"
description = "Operator-first Sigma.Money CLI scaffold for capture, decode, plan, ABI inspection, and read-only account fetch."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
sigma = "sigma_operator.cli:main"
