[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sigma-operator"
version = "0.1.0"
description = "Evidence-first Sigma.Money CLI for BNB Chain capture, decode, planning, ABI inspection, and read-only account inspection."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
sigma = "sigma_operator.cli:main"
